--- a/part2/phonebook/src/index.css
+++ b/part2/phonebook/src/index.css
@@ -1,5 +1,15 @@
-.notification {
+.green {
     color: green;
+    background: lightgrey;
+    font-size: 20px;
+    border-style: solid;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px;
+}
+
+.red {
+    color: red;
     background: lightgrey;
     font-size: 20px;
     border-style: solid;
